--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "files.associations": {
-        "stack": "cpp"
-    }
+  "files.associations": {
+    "stack": "cpp",
+    "istream": "cpp",
+    "iostream": "cpp"
+  }
 }
